<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_order"
        android:icon="@drawable/ic_order_nav"
        android:enabled="true"
        android:title="@string/order" />
    <item
        android:id="@+id/action_pay_dish"
        android:icon="@drawable/ic_pan"
        android:enabled="true"
        android:title="@string/tramon" />
<!--    <item-->
<!--        android:id="@+id/action_caculater"-->
<!--        android:icon="@drawable/ic_bill_nav"-->
<!--        android:enabled="true"-->
<!--        android:title="@string/tamtinh" />-->
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more"
        android:enabled="true"
        android:title="@string/more" />

</menu>