<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clActionbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_56"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="@dimen/size_56"
            android:layout_height="@dimen/size_56"
            android:background="?selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="@dimen/size_56"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/pay"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_20"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btnBack"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        <TextView-->
        <!--            android:id="@+id/tvDone"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="@dimen/size_56"-->
        <!--            android:background="?selectableItemBackground"-->
        <!--            android:gravity="center"-->
        <!--            android:padding="@dimen/padding_8"-->
        <!--            android:text="@string/xong"-->
        <!--            android:textColor="#FFFFFF"-->
        <!--            android:textSize="@dimen/text_18"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintRight_toRightOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_Done_Pay"
        android:layout_below="@id/clActionbar"
        android:layout_margin="@dimen/margin_8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingLeft="@dimen/padding_16"
                android:paddingRight="@dimen/padding_16">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/padding_8"
                    android:text="@string/bill"
                    android:textColor="@color/colorTextDarkGray"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/num"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvBillNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/padding_4"
                    android:paddingBottom="@dimen/padding_4">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_16"
                        android:text="@string/date"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvDateCreated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/padding_4"
                    android:paddingBottom="@dimen/padding_4">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_12"
                        android:text="@string/area"
                        android:textSize="@dimen/text_16"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_Area_Name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tầng 2" />

                    <TextView
                        android:id="@+id/tv_Table_Name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_16"
                        android:text="Tầng 2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/padding_4"
                    android:paddingBottom="@dimen/padding_4">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_12"
                        android:text="@string/name_employee"
                        android:textSize="@dimen/text_16"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dương Đắc Khanh"
                        android:textSize="@dimen/text_16" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/title_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_bill_title_column"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_4"
                    android:weightSum="@integer/weight_sum_bill">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/good_name"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/quatity"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="center"
                        android:text="@string/unit_price"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/into_money"
                        android:textAlignment="textEnd"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_InventoryItem"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-1dp"
                    android:background="@drawable/background_bill_title_column" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/the_money_have_to_pay"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvMoneyHaveToPay"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_8"
                        android:layout_weight="1"
                        android:padding="@dimen/padding_4"
                        android:singleLine="true"
                        android:textAlignment="textEnd"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/diliver_height"
                    android:background="@color/colorGray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guest_pay"
                        android:textColor="@color/colorBlue" />

                    <EditText
                        android:id="@+id/etMoneyGuestPay"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_8"
                        android:layout_weight="1"
                        android:background="@null"
                        android:inputType="number"
                        android:padding="@dimen/padding_4"
                        android:singleLine="true"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorBlue"
                        tools:ignore="Autofill,LabelFor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/money_returned_to_guest" />

                    <TextView
                        android:id="@+id/tvMoneyReturn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_8"
                        android:layout_weight="1"
                        android:padding="@dimen/padding_4"
                        android:singleLine="true"
                        android:text="@string/price_default"
                        android:textAlignment="textEnd" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:gravity="center"
                    android:text="@string/happy_again"
                    android:textColor="@color/text"
                    android:textStyle="italic|bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_footer_bill"
                android:paddingTop="@dimen/padding_4" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_Done_Pay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_48"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_12"
        android:background="@color/colorPrimaryDark"
        android:text="@string/xong"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/text_18" />
</RelativeLayout>